fix text align modal

--- a/src/components/SubmissionModal/submissionModal.css
+++ b/src/components/SubmissionModal/submissionModal.css
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   z-index: 10;
+  text-align: center;
 }
 
 .modal-content {
